# pkg/apis/v1alpha1/api/oas_response_encoders_gen.go
@@ -40,6 +40,32 @@ func encodeCreateApplicationSecretResponse(response *Secret, w http.ResponseWrit
 	return nil
 }
 
+func encodeDeleteApplicationResponse(response DeleteApplicationRes, w http.ResponseWriter, span trace.Span) error {
+	switch response := response.(type) {
+	case *DeleteApplicationNoContent:
+		w.WriteHeader(204)
+		span.SetStatus(codes.Ok, http.StatusText(204))
+
+		return nil
+
+	case *Error:
+		w.Header().Set("Content-Type", "application/json; charset=utf-8")
+		w.WriteHeader(404)
+		span.SetStatus(codes.Error, http.StatusText(404))
+
+		e := new(jx.Encoder)
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+
+		return nil
+
+	default:
+		return errors.Errorf("unexpected response type: %T", response)
+	}
+}
+
 func encodeDeleteApplicationSecretResponse(response DeleteApplicationSecretRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
 	case *DeleteApplicationSecretNoContent:
